##Text encoding: utf-8

2011-07-02  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/window.cc: use GtkGrid.
	* libs/gcugtk/filechooser.cc: ditto.
	* ui/libgcu/image-resolution.ui: added missing label.

2011-07-01  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/fontsel.cc: replace more boxes and tables.
	* libs/gcp/tools.cc: fixed toolbars margins.
	* plugins/paint/text/fontsel.ui: minor tweaks.
	* ui/paint/tools.ui: fixed margins.

2011-06-30  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcp/preferences.cc: replace boxes and tables.
	* libs/gcp/preferences.h: ditto.
	* ui/paint/preferences.ui: ditto.

2011-06-29  Jean Bréfort  <jean.brefort@normalesup.org>
	* plugins/paint/residues/residues.ui: cleaning in plugins completed.
	* plugins/paint/selection/brackets.ui: ditto.
	* plugins/paint/selection/lassotool.cc: ditto.
	* plugins/paint/selection/selectiontool.cc: ditto.
	* plugins/paint/templates/new-template.ui: ditto.
	* plugins/paint/templates/templates.ui: ditto.
	* plugins/paint/text/fontsel.ui: ditto.
	* plugins/paint/text/texttool.cc: ditto.

2011-06-28  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gccv/brackets.cc: fixed a pixman warning.
	* plugins/paint/residues/residues.ui: replace more boxes and tables.
	* plugins/paint/selection/brackets.ui: ditto.
	* plugins/paint/selection/bracketstool.cc: ditto.
	* plugins/paint/selection/group.ui: ditto.
	* plugins/paint/templates/new-template.ui: ditto.
	* plugins/paint/templates/templates.ui: ditto.
	* plugins/paint/templates/templatetool.cc: ditto.
	* plugins/paint/text/fontsel.ui: ditto.

2011-06-08  Jean Bréfort  <jean.brefort@normalesup.org>
	* libs/gcr/grid.cc: make it compile again.
	* libs/gcu/chain.cc: fixed an infinite loop condition.
	* libs/gcu/molecule.cc: ditto.
	* libs/gcu/molecule.h: ditto.
	* plugins/paint/cycles/cycle.ui: replace more boxes and tables.
	* plugins/paint/cycles/cyclen.ui: ditto.
	* plugins/paint/residues/pseudo-atom.cc: mark as new whan loaded.